[gd_scene load_steps=2 format=2]

[ext_resource path="res://PauseMenu/PauseMenu.gd" type="Script" id=1]

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.0
margin_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main Menu" type="VBoxContainer" parent="CenterContainer"]
margin_left = 457.0
margin_top = 254.0
margin_right = 567.0
margin_bottom = 346.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReturnButton" type="Button" parent="CenterContainer/Main Menu"]
margin_right = 110.0
margin_bottom = 20.0
text = "Return to game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ResetButton" type="Button" parent="CenterContainer/Main Menu"]
margin_top = 24.0
margin_right = 110.0
margin_bottom = 44.0
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="Button" parent="CenterContainer/Main Menu"]
margin_top = 48.0
margin_right = 110.0
margin_bottom = 68.0
text = "Multiplayer"

[node name="QuitButton" type="Button" parent="CenterContainer/Main Menu"]
margin_top = 72.0
margin_right = 110.0
margin_bottom = 92.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="VBoxContainer" parent="CenterContainer"]
visible = false
margin_left = 412.0
margin_top = 248.0
margin_right = 612.0
margin_bottom = 352.0

[node name="BackButton" type="Button" parent="CenterContainer/Multiplayer"]
margin_left = 45.0
margin_right = 155.0
margin_bottom = 20.0
rect_min_size = Vector2( 110, 0 )
size_flags_horizontal = 4
text = "Back"

[node name="LineEdit" type="LineEdit" parent="CenterContainer/Multiplayer"]
margin_top = 24.0
margin_right = 200.0
margin_bottom = 48.0
placeholder_text = "Username"

[node name="Host" type="HBoxContainer" parent="CenterContainer/Multiplayer"]
margin_top = 52.0
margin_right = 200.0
margin_bottom = 76.0
rect_min_size = Vector2( 200, 0 )

[node name="Port" type="LineEdit" parent="CenterContainer/Multiplayer/Host"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "6969"
placeholder_text = "Port"

[node name="HostButton" type="Button" parent="CenterContainer/Multiplayer/Host"]
margin_left = 150.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "Host"

[node name="Join" type="HBoxContainer" parent="CenterContainer/Multiplayer"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 104.0

[node name="IP" type="LineEdit" parent="CenterContainer/Multiplayer/Join"]
margin_right = 146.0
margin_bottom = 24.0
size_flags_horizontal = 3
text = "127.0.0.1:6969"
placeholder_text = "IP"

[node name="JoinButton" type="Button" parent="CenterContainer/Multiplayer/Join"]
margin_left = 150.0
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 50, 0 )
text = "Join"

[connection signal="pressed" from="CenterContainer/Main Menu/ReturnButton" to="." method="_on_ReturnButton_pressed"]
[connection signal="pressed" from="CenterContainer/Main Menu/ResetButton" to="." method="_on_ResetButton_pressed"]
[connection signal="pressed" from="CenterContainer/Main Menu/MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="CenterContainer/Main Menu/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CenterContainer/Multiplayer/BackButton" to="." method="_on_MultiplayerBackButton_pressed"]
[connection signal="pressed" from="CenterContainer/Multiplayer/Host/HostButton" to="." method="_on_MultiplayerHostButton_pressed"]
[connection signal="pressed" from="CenterContainer/Multiplayer/Join/JoinButton" to="." method="_on_MultiplayerJoinButton_pressed"]
